Added prototype for save function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <textarea id="css" placeholder="CSS"></textarea>
         <textarea id="js" placeholder="JavaScript"></textarea>
         <iframe id="code"></iframe>
+        <form>
+            <input id="save" type="button" value="Save code">
+        </form>
 
         <script type="text/javascript" src="app.js"></script>
     </body>
