--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta name="viewport" content="width=device-width", initial-scale=1 />
 
         <link rel="stylesheet" href="style.css" />
+        <script type="module" src="./scripts/FileSaver.js"></script>
+
+        <script>
+            if (global === undefined) {
+              var global = window;
+            }
+          </script>    
     </head>
 
     <body>
