--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
         <link rel="stylesheet" href="style.css" />
         <script type="module" src="./scripts/FileSaver.js"></script>
+        <script type="module" src="./scripts/jszip.js"></script>
 
+        <!-- Fix to global being undefined-->
         <script>
             if (global === undefined) {
               var global = window;
