--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Code Editor</title>
         <meta name="viewport" content="width=device-width", initial-scale=1 />
 
-        <link rel="stylesheet" href="./scripts/style.css" />
+        <link rel="stylesheet" href="style.css" />
         <script type="module" src="./scripts/FileSaver.js"></script>
         <script type="module" src="./scripts/jszip.js"></script>
 
