fixed bug linking to app.js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             <input id="save" type="button" value="Save code">
         </form>
 
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="./scripts/app.js"></script>
     </body>
 </html>
